<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.aphreet.c3</groupId>
    <artifactId>c3-tika-server</artifactId>
    <packaging>war</packaging>
    <version>2.0.0-SNAPSHOT</version>
    <name>C3 Tika</name>

    <scm>
        <connection>scm:git:ssh://github.com/ifunsoftware/c3-tika-server.git</connection>
        <url>https://github.com/ifunsoftware/c3-tika-server</url>
        <developerConnection>scm:git:ssh://git@github.com/ifunsoftware/c3-tika-server.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-parsers</artifactId>
            <version>1.3</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.2</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.2</version>
        </dependency>

        <dependency>
        	<groupId>ch.qos.logback</groupId>
        	<artifactId>logback-classic</artifactId>
        	<version>1.0.8</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Web-ContextPath>/</Web-ContextPath>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>8.1.10.v20130312</version>
                <configuration>
                    <jvmArgs>-XX:PermSize=256M -XX:MaxPermSize=512M -Xms256M -Xmx800M</jvmArgs>
                    <webApp>
                        <contextPath>/</contextPath>
                    </webApp>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>http://repo1.maven.org/maven2</url>
        </repository>

        <repository>
            <id>libs-release</id>
            <name>iFunSoftware release repository</name>
            <url>http://repository.ifunsoftware.com/content/repositories/releases</url>
        </repository>

        <repository>
            <id>libs-snapshot</id>
            <name>iFunSoftware snapshot repository</name>
            <url>http://repository.ifunsoftware.com/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>ifunsoftware</id>
            <name>iFunSoftware release repository</name>
            <url>http://repository.ifunsoftware.com/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>ifunsoftware-snap</id>
            <name>iFunSoftware snapshot repository</name>
            <url>http://repository.ifunsoftware.com/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
